Implementação: Adicionado uma nova variavel para confirmar ao usuario a atualização do aluno.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="textErrorDay">Insira um dia válido</string>
     <string name="textErrorCpfExistent">CPF já está cadastrado!</string>
     <string name="textSucessRegister">Aluno cadastrado com sucesso!</string>
+    <string name="textSucessUpdated">Aluno atualizado com sucesso!</string>
     <string name="textCardName">Aluno: </string>
     <string name="textCardSport">Esporte: </string>
     <string name="textCardDay">Dia do pagamento: </string>
