--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
     <string name="textCardDay">Dia do pagamento: </string>
     <string name="textTotalRegisted">Total de Cadastrados:</string>
     <string name="textResultRegisted">0</string>
+    <string name="deleteAluno">Excluir aluno</string>
+    <string name="textConfirmationDelete">Tem certeza que deseja excluir este aluno?</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
 
 </resources>
