Implementação: Adicionado novas variaveis de strings para cpf, nome, esporte e dia não encontrados na intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,9 @@
     <string name="textConfirmationDelete">Tem certeza que deseja excluir este aluno?</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
+    <string name="cpfNotFound">cpf not found</string>
+    <string name="nameNotFound">name not found</string>
+    <string name="sportNotFound">sport not found</string>
+    <string name="dayNotFound">day not found</string>
 
 </resources>
